@@ -175,6 +175,10 @@ Enhancements
     checking if it can be used in parallel analysis. (Issue #2996, PR #2950)
 
 Changes
+  * `analysis.hole2.HoleAnalysis` now stores ``sphpdbs``, ``outfiles``
+    and ``profiles`` in the `analysis.base.Results` class (Issues #3261, #3269)
+  * `helix_analysis.HELANAL` now uses the `analysis.base.Results` class to
+    store results attributes (Issue #3261, #3267)
   * `analysis.diffusionmap.DistanceMatrix` class now stores `dist_matrix`
     using the `analysis.base.Results` class (Issues #3288, #3290)
   * `analysis.align.AlignTraj` and `analysis.align.AverageStructure` now store
@@ -243,6 +247,10 @@ Changes
   * Added OpenMM coordinate and topology converters (Issue #2863, PR #2917)
 
 Deprecations
+  * The ``sphpdbs``, ``outfiles`` and ``profiles`` attributes of
+    `analysis.hole2.HoleAnalysis` are now deprecated in favour of
+    ``results.sphpdbs``, ``results.outfiles`` and
+    ``results.profiles`` (Issues #3261, #3269)
   * The `analysis.diffusionmap.DistanceMatrix.dist_matrix` is now deprecated in
     favour of `analysis.diffusionmap.DistanceMatrix.results.dist_matrix`. 
     It will be removed in 3.0.0 (Issues #3288, #3290)
